# HistoPrep

./: .gitignore  .readthedocs.yml  CHANGELOG.md  HistoPrep  LICENSE  README.md  __main__.py  args.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: 404.html  API.rst  conf.py  histoprep.html  histoprep.preprocess.functional.rst  histoprep.rst  index.html  index.rst  install.rst  intro.rst  modules.rst  requirements.txt  search.html  search.js  sitemap.xml  usage.rst
docs/api/: index.html
docs/histoprep/: functional.html  utils.html
docs/search/: search_index.json
docs/source/: histoprep.preprocess.rst  histoprep.rst
histoprep/: __init__.py  _backend.py  _cli.py  _cutter.py  _czi_reader.py  _data.py  _dearrayer.py  _errors.py  _functional.py  _helpers.py  _labeler.py  _logger.py  _reader.py  _thumbnail.py  _version.py  backend.py  cutter.py  dearrayer.py  helpers.py
histoprep/_cli/: __init__.py  _cut.py
scripts/: update_docs.sh  usage.ipynb
test/: paths.py  pytest.ini  test_backends.py  test_coordinates.py  test_cutting.py  test_files.py  test_metadata.py  test_multiprocess.py  test_outliers.py  test_preprocess.py  test_progress_bar.py  test_reader.py  test_time.py
tests/: _utils.py  backend_test.py  cli_test.py  collage_test.py  dearray_test.py  mean_and_std_test.py  metadata_test.py  metrics_test.py  normalize_test.py  pytest.ini  reader_test.py  stain_test.py  test_backend.py  test_dearray.py  test_metrics.py  test_pillow.py  test_reader.py  test_tiles.py  test_tissue.py  tiles_test.py  tissue_test.py  torch_test.py  utils.py
(+140 files in other folders)
