[tool.poetry]
name = "histoprep"
version = "2.0.1"
description = "Read and process histological slide images with python!"
authors = ["jopo666 <jopo@birdlover.com>"]
readme = "README.md"

[tool.poetry.scripts]
HistoPrep = 'histoprep._cli:cut_slides'

[tool.poetry.dependencies]
aicspylibczi = "^3"
matplotlib = "*"
mpire = "^2.6"
numpy = "*"
opencv-python-headless = "^4"
openslide-python = "^1.2"
pillow = "^9"
polars = "^0.16"
python = "^3.9"
rich-click = "^1.6"
scikit-learn = "^1"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
pytest = "*"
ipywidgets = "*"
torch = "*"
pytest-console-scripts = "^1.3.1"
pdoc = "^13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
